--- a/index.html
+++ b/index.html
@@ -3,36 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Website</title>
+    <title>American Airlines Name Corrections: Fees & How-To</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #0056b3;
-        }
-        a {
-            color: #0056b3;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
+        <!DOCTYPE html>
+        
 <body>
-    <div class="container">
-        <h1>Hello, GitHub Pages!</h1>
-        <p>This is my first website hosted on GitHub.</p>
-        <p>You can find more information on my [GitHub profile](
+         <!-- Featured Image -->
+    <img src="https://img1.wsimg.com/isteam/ip/69ea8fdc-1e69-4e24-81ac-e0de8aabf164/Pol%C3%ADtica%20de%20cambio%20de%20vuelos%20de%20Americ-a800c90.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1280" 
+         alt="American Airlines Name Change Policy" 
+         style="width:100%; max-width:1280px; height:auto; margin:20px 0;">
+
+    <h1>American Airlines Name Change Policy: Your Complete Guide</h1>
+
+    <p>Booking a flight can sometimes be stressful, especially when errors happen in your ticket details. One common challenge travelers face is having to correct or change the name on their American Airlines booking. Understanding the <strong>American Airlines Name Change Policy</strong> is crucial to avoid unnecessary fees, ensure seamless travel, and protect your ticket. In this guide, we’ll explore everything you need to know about American Airlines name changes, associated policies, steps to update your booking, and tips for a hassle-free experience.</p>
+
+    <p>For expert assistance with name corrections or flight issues, you can reach <strong>Tours N Travel Pro at +1-866-679-5070</strong>.</p>
+
+    <h2>Why Understanding American Airlines Name Change Policy Matters</h2>
+
+    <p>When you book a flight, your ticket must exactly match the name on your government-issued ID or passport. Any mismatch can cause denied boarding, flight delays, or even ticket cancellation. The <strong>American Airlines Name Change Policy</strong> exists to prevent these issues and to maintain airline security protocols.</p>
+
+    <h3>Common Scenarios Requiring Name Changes</h3>
+    <ul>
+        <li><strong>Typographical errors</strong> – Misspellings during booking.</li>
+        <li><strong>Legal name changes</strong> – Due to marriage, divorce, or personal reasons.</li>
+        <li><strong>Middle name or initial adjustments</strong> – Adding or removing middle names.</li>
+        <li><strong>International travel corrections</strong> – Passport and ticket must match exactly.</li>
+    </ul>
+
+    <p>Addressing these issues promptly ensures you can travel without disruption and protects your investment in your ticket.</p>
+
+    <h2>How American Airlines Handles Name Changes</h2>
+
+    <p>American Airlines distinguishes between minor corrections and complete name changes.</p>
+
+    <h3>Minor Corrections</h3>
+    <p>Minor corrections include simple spelling mistakes or typos that do not fundamentally alter the passenger’s identity. For example:</p>
+    <ul>
+        <li>“Jhon” → “John”</li>
+        <li>“Smtih” → “Smith”</li>
+    </ul>
+    <p>These changes are usually accepted with minimal fees, and sometimes even free if corrected immediately after booking.</p>
+
+    <h3>Major Name Changes</h3>
+    <p>Major changes involve legal name changes or completely different names. Examples include:</p>
+    <ul>
+        <li>Name change due to marriage or divorce</li>
+        <li>Changing from “Mary Jane Smith” to “Mary Johnson”</li>
+    </ul>
+    <p>Major changes may require additional documentation, such as a marriage certificate, court order, or government-issued ID. Fees may apply depending on the ticket type and airline policies.</p>
+
+    <h2>American Airlines Name Change Fees</h2>
+    <p>Fees for name changes vary depending on ticket type, route, and timing. While policies can change, here’s a general idea:</p>
+    <ul>
+        <li><strong>Domestic flights:</strong> Minor corrections often free; major changes may cost $150–$200.</li>
+        <li><strong>International flights:</strong> Name corrections may cost $150–$300 or more.</li>
+        <li><strong>Award tickets:</strong> Name changes are sometimes restricted; contact customer service for assistance.</li>
+    </ul>
+    <p>Always check your ticket rules carefully. Certain discounted or promotional fares may have stricter rules and higher fees.</p>
+
+    <h2>Step-by-Step Guide to Change Your Name on American Airlines Ticket</h2>
+
+    <h3>Step 1: Review Your Ticket</h3>
+    <p>Before contacting American Airlines, check your e-ticket for any errors. Identify whether it is a minor correction or a major change.</p>
+
+    <h3>Step 2: Gather Required Documentation</h3>
+    <p>For major changes, prepare supporting documents:</p>
+    <ul>
+        <li>Marriage certificate or divorce decree</li>
+        <li>Court-issued legal name change certificate</li>
+        <li>Valid government ID or passport</li>
+    </ul>
+
+    <h3>Step 3: Contact American Airlines</h3>
+    <p>You can request a name change via:</p>
+    <ul>
+        <li><strong>Customer service hotline</strong> – Have your booking reference ready.</li>
+        <li><strong>Official website</strong> – Some minor corrections can be made online.</li>
+        <li><strong>Airport counter</strong> – In emergencies or last-minute corrections.</li>
+    </ul>
+    <p>For quick and hassle-free assistance, <strong>Tours N Travel Pro at +1-866-679-5070</strong> can handle the process on your behalf.</p>
+
+    <h3>Step 4: Pay Applicable Fees</h3>
+    <p>Once your request is verified, pay any fees associated with the change. Keep the receipt or confirmation email for your records.</p>
+
+    <h3>Step 5: Confirm Updated Ticket</h3>
+    <p>After processing, verify that your updated ticket matches your ID exactly. This step is crucial for international travel.</p>
+
+    <h2>Tips to Avoid Name Change Issues</h2>
+
+    <h3>1. Double-Check Details Before Booking</h3>
+    <p>Ensure that the name entered matches your passport or ID exactly, including middle names and initials.</p>
+
+    <h3>2. Book Early</h3>
+    <p>Booking in advance provides flexibility and reduces the risk of last-minute errors.</p>
+
+    <h3>3. Keep Documentation Ready</h3>
+    <p>If you anticipate a legal name change, have your official documents ready to expedite corrections.</p>
+
+    <h3>4. Use Travel Assistance Services</h3>
+    <p>Professional travel services like <strong>Tours N Travel Pro (+1-866-679-5070)</strong> can help verify and correct details before your flight.</p>
+
+    <h2>American Airlines Name Policy for International Travelers</h2>
+
+    <p>International flights have stricter requirements than domestic routes. Your ticket name must match your passport exactly.</p>
+
+    <h3>Key Considerations</h3>
+    <ul>
+        <li>Even minor typos can prevent boarding.</li>
+        <li>Some countries may deny entry if names do not match.</li>
+        <li>Passport updates must be reflected in your ticket well in advance.</li>
+    </ul>
+    <p>Professional assistance ensures your ticket aligns with all international travel regulations.</p>
+
+    <h2>American Airlines Name Change for Children</h2>
+
+    <h3>Guidelines</h3>
+    <ul>
+        <li>Ticket must reflect the child’s full legal name as on their birth certificate or passport.</li>
+        <li>Corrections may require a copy of the birth certificate.</li>
+        <li>Certain fees may apply if the name change is due to booking errors.</li>
+    </ul>
+    <p>Always verify rules in advance to avoid delays at check-in.</p>
+
+    <h2>American Airlines Name Change for Group Bookings</h2>
+
+    <ul>
+        <li>Minor corrections can often be processed individually.</li>
+        <li>Major changes may require documentation for each passenger.</li>
+        <li>Fees may vary depending on the ticket type.</li>
+    </ul>
+    <p>Using a professional service can simplify the process, especially for corporate or family group bookings.</p>
+
+    <h2>Can You Transfer Your Ticket to Another Person?</h2>
+
+    <p>American Airlines generally does <strong>not allow ticket transfers</strong> to another individual. The ticket must match the traveler’s legal name.</p>
+    <ul>
+        <li>Only minor corrections for the same passenger are permitted.</li>
+        <li>Attempting to travel under a different name can result in denied boarding.</li>
+    </ul>
+
+    <h2>Common Myths About Name Changes</h2>
+
+    <h3>Myth 1: Minor typos are ignored</h3>
+    <p>Reality: Even small errors can cause denied boarding, especially for international flights.</p>
+
+    <h3>Myth 2: Name changes are free</h3>
+    <p>Reality: Fees often apply, especially for major changes or international tickets.</p>
+
+    <h3>Myth 3: You can change names at the airport last minute</h3>
+    <p>Reality: Some changes require prior approval and documentation; airport corrections may not be guaranteed.</p>
+
+    <h2>Why Use a Travel Assistance Service for Name Changes?</h2>
+
+    <p>Changing your ticket name can be stressful and time-sensitive. <strong>Tours N Travel Pro</strong> specializes in assisting travelers with:</p>
+    <ul>
+        <li>Name corrections and updates</li>
+        <li>Verification of travel documents</li>
+        <li>Handling international travel requirements</li>
+        <li>Reducing errors and fees</li>
+    </ul>
+    <p>With professional support, you save time, reduce stress, and ensure compliance with airline policies.</p>
+
+    <h2>Conclusion</h2>
+
+    <p>The <strong>American Airlines Name Change Policy</strong> exists to protect travelers and ensure secure, smooth air travel. Whether correcting a typo, updating your legal name, or managing a group booking, understanding the rules is essential.</p>
+
+    <p><strong>Key Takeaways:</strong></p>
+    <ul>
+        <li>Always match your ticket name with your ID or passport.</li>
+        <li>Minor corrections are easier; major changes may require documentation and fees.</li>
+        <li>International travelers must be especially careful to avoid denied boarding.</li>
+        <li>Using a professional travel service like <strong>Tours N Travel Pro at +1-866-679-5070</strong> can simplify the process.</li>
+    </ul>
+
+    <p>By following these guidelines, you can confidently manage your American Airlines ticket and travel with peace of mind.</p>
+
+    <h2>FAQ</h2>
+
+    <h3>Q1: How long does it take for a name change to process?</h3>
+    <p>Processing usually takes 24–48 hours but may vary depending on documentation requirements.</p>
+
+    <h3>Q2: Are there exceptions for award tickets?</h3>
+    <p>Yes, award tickets may have stricter policies; always verify with customer service.</p>
+
+    <h3>Q3: Can I change my name after check-in?</h3>
+    <p>No, most changes must be completed before check-in.</p>
+
+    <h3>Q4: Are children treated differently for name changes?</h3>
+    <p>Yes, documentation such as a birth certificate or passport is usually required.</p>
+
+    <h3>Q5: What if my name change request is denied?</h3>
+    <p>Contact customer service or a professional travel assistance service for next steps.</p>
+
+    <p><strong>For instant assistance with American Airlines name changes and travel issues, contact Tours N Travel Pro at +1-866-679-5070.</strong></p>
+
+</body>
+</html>
