--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>American Airlines Name Change Policy: Complete Guide</title>
+    <title>American Airlines Name Corrections: Fees & How-To</title>
 </head>
 <body>
 
     <h1>American Airlines Name Change Policy: Your Complete Guide</h1>
+    <!-- Featured Image -->
+    <img src="https://img1.wsimg.com/isteam/ip/69ea8fdc-1e69-4e24-81ac-e0de8aabf164/Pol%C3%ADtica%20de%20cambio%20de%20vuelos%20de%20Americ-a800c90.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1280" 
+         alt="American Airlines Name Change Policy" 
+         style="width:100%; max-width:1280px; height:auto; margin:20px 0;">
 
     <p>Booking a flight can sometimes be stressful, especially when errors happen in your ticket details. One common challenge travelers face is having to correct or change the name on their American Airlines booking. Understanding the <strong>American Airlines Name Change Policy</strong> is crucial to avoid unnecessary fees, ensure seamless travel, and protect your ticket. In this guide, we’ll explore everything you need to know about American Airlines name changes, associated policies, steps to update your booking, and tips for a hassle-free experience.</p>
 
