Revise American Airlines name change guide content
Updated contact information and added links for better navigation.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>American Airlines Name Change Policy: Your Complete Guide</h1>
+    <h1>American Airlines Name Corrections: Fees & How-To</h1>
     <!-- Featured Image -->
     <img src="https://img1.wsimg.com/isteam/ip/69ea8fdc-1e69-4e24-81ac-e0de8aabf164/Pol%C3%ADtica%20de%20cambio%20de%20vuelos%20de%20Americ-a800c90.jpg/:/cr=t:0%25,l:0%25,w:100%25,h:100%25/rs=w:1280" 
          alt="American Airlines Name Change Policy" 
@@ -15,11 +15,11 @@
 
     <p>Booking a flight can sometimes be stressful, especially when errors happen in your ticket details. One common challenge travelers face is having to correct or change the name on their American Airlines booking. Understanding the <strong>American Airlines Name Change Policy</strong> is crucial to avoid unnecessary fees, ensure seamless travel, and protect your ticket. In this guide, we’ll explore everything you need to know about American Airlines name changes, associated policies, steps to update your booking, and tips for a hassle-free experience.</p>
 
-    <p>For expert assistance with name corrections or flight issues, you can reach <strong>Tours N Travel Pro at +1-866-679-5070</strong>.</p>
+    <p>For expert assistance with name corrections or flight issues, you can reach <strong>Tours N Travel Pro at <a href="tel:18666795070">+1-866-679-5070</a></strong>.</p>
 
     <h2>Why Understanding American Airlines Name Change Policy Matters</h2>
 
-    <p>When you book a flight, your ticket must exactly match the name on your government-issued ID or passport. Any mismatch can cause denied boarding, flight delays, or even ticket cancellation. The <strong>American Airlines Name Change Policy</strong> exists to prevent these issues and to maintain airline security protocols.</p>
+    <p>When you book a flight, your ticket must exactly match the name on your government-issued ID or passport. Any mismatch can cause denied boarding, flight delays, or even ticket cancellation. The <strong><a href="https://www.toursntravelpro.com/name-change-policy/american-airlines-name-change-policy/">American Airlines Name Change Policy</a></strong> exists to prevent these issues and to maintain airline security protocols.</p>
 
     <h3>Common Scenarios Requiring Name Changes</h3>
     <ul>
@@ -63,7 +63,7 @@
     <h2>Step-by-Step Guide to Change Your Name on American Airlines Ticket</h2>
 
     <h3>Step 1: Review Your Ticket</h3>
-    <p>Before contacting American Airlines, check your e-ticket for any errors. Identify whether it is a minor correction or a major change.</p>
+    <p>Before contacting <strong><a href="https://en.wikipedia.org/wiki/American_Airlines">Tours N Travel Pro</a></strong>, check your e-ticket for any errors. Identify whether it is a minor correction or a major change.</p>
 
     <h3>Step 2: Gather Required Documentation</h3>
     <p>For major changes, prepare supporting documents:</p>
@@ -194,7 +194,7 @@
     <h3>Q5: What if my name change request is denied?</h3>
     <p>Contact customer service or a professional travel assistance service for next steps.</p>
 
-    <p><strong>For instant assistance with American Airlines name changes and travel issues, contact Tours N Travel Pro at +1-866-679-5070.</strong></p>
+    <p><strong>For instant assistance with American Airlines name changes and travel issues, contact <strong><a href="https://www.toursntravelpro.com/">Tours N Travel Pro</a></strong> at +1-866-679-5070.</strong></p>
 
 </body>
 </html>
