--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="6m-1bc4sSARl-5spqr9YJxUCpKZnyraYM7Nr-bLVKrc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>American Airlines Name Corrections: Fees & How-To</title>
